# radyko

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  bacon.toml  example.compose.yml  example.otel.compose.yml  init.sh  otel-collector-config.yaml  sample.compose.yml
.cargo/: config.toml
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: timefree.md
src/: cli.rs  constants.rs  lib.rs  main.rs  telemetry.rs
src/app/: config.rs  credential.rs  ffmpeg_builder.rs  hls.rs  mod.rs  program_reserver.rs  program_resolver.rs  program_selector.rs  recording.rs  search_programs.rs  state.rs  types.rs  utils.rs
src/commands/: common.rs  mod.rs  recorder.rs  rule.rs  search.rs
src/model/: logo.rs  mod.rs  program.rs  region.rs  search.rs  station.rs
src/radiko/: client.rs  converter.rs  credential.rs  mod.rs
src/radiko/api/: auth.rs  endpoint.rs  mod.rs  program.rs  search.rs  station.rs  stream.rs  utils.rs
src/radiko/xml/: logo.rs  mod.rs  program.rs  region.rs  station.rs
tests/: common.rs  load_config_test.rs  recording_program_test.rs  resolve_programs_test.rs  rule_command_test.rs  time_free_search_test.rs  time_free_test.rs  timefree_test.rs
tests/fixtures/: empty_keywords_config.toml  empty_rules_radyko.toml
tests/snapshots/: load_config_test__load_config_test__valid_empty_keywords_parse_test.snap  load_config_test__load_config_test__valid_empty_rules_parse_test.snap  load_config_test__load_config_test__valid_parse_test.snap
