[package]
name = "radyko"
version = "0.1.2"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
cron = "0.16.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hls_m3u8 = "0.5.1"
http-cache-reqwest = "0.16.0"
log = "0.4.29"
mimalloc = { version = "0.1.48", features = ["v3"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["cookies", "json","charset", "http2", "hickory-dns", "rustls-tls"] }
reqwest-middleware = { version = "0.4.2"}
sanitise-file-name = "1.0.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
md-5 = "0.11"
strum_macros = "0.28.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "local-time"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }

# insta faster runs setting
# https://insta.rs/docs/quickstart/
[profile.dev.package]
insta.opt-level = 3
